<resources>
    <string name="foursquare_client_id" templateMergeStrategy="preserve" translatable="false">LE1LKPJZWSPNQVVEQEYI0A24DEH54KZVVIT1WI1CB3GOUJVT</string>
    <string name="foursquare_client_secret" templateMergeStrategy="preserve" translatable="false">WCFHNL3KMOBJH5QRREUQZ3FFAQLV10KRUJ445LCBROYESFPN</string>
    <string name="google_maps_key" translatable="false">AIzaSyAz8KqoIZ3-6apw8zG1Vi9GIYPln1QXHCs</string>

    <string name="app_name">WorldTraveller\'sGuide</string>
    <string name="action_settings">Settings</string>
    <string name="internet_connection_message">No internet service is available</string>
    <string name="enter_city_message">Enter city to search</string>
    <string name="place_item_content_description">Venue in or near the location you entered</string>
    <string name="location_permission_explanation_message">You need to allow fine location to be accessed in order to search based on your location</string>
    <string name="search_by_city_button_text">Search for venus by city name</string>
    <string name="search_by_latitude_and_longitude_button_text">Search for venues by latitude and longitude</string>
    <string name="location_error_message">Unable to get location information</string>
    <string name="main_activity_ad_unit_id">tba</string>
    <string name="detail_activity_ad_unit_id">tba</string>
    <string name="open_venue_in_map_button_text">Open venue in map</string>
    <string name="title_activity_saved_locations">SavedLocationsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_query_edit_text_prompt">Enter search term</string>
    <string name="search_query_edit_text_content_description">Enter search query</string>
    <string name="location_edit_text_prompt">Near me</string>
    <string name="location_edit_text_content_description">Enter your location to perform a nearby search</string>
    <string name="item_icon_view_content_description">Venue Icon</string>
    <string name="item_name_view_text">Item Name</string>
    <string name="item_name_view_content_description">Venue Name</string>
    <string name="item_address_view_text">Address</string>
    <string name="item_address_view_content_description">Venue Address</string>
    <string name="item_rating_view_text">8.0</string>
    <string name="item_rating_view_content_description">Venue Rating</string>
    <string name="transition_tag" translatable="false">transition</string>
    <string name="venue_widget_icon_content_description">Venue widget icon</string>
    <string name="venue_widget_content_description">Results of a search for a random venue</string>
    <string name="no_data_found_error_message">No data found</string>
    <string name="web_browser_not_found_error_message">You need to install a web browser to use this feature</string>
    <string name="snippet_text">View on Foursquare</string>
    <string name="rating_view_additional_text"/>
    <string name="error_message_title">Error</string>
    <string name="error_in_search_error_message">There was some error in performing search</string>
    <string name="location_unavailable_error_message">Location is not available.  Please provide city to perform nearby search</string>
    <string name="positive_button_text">OK</string>
    <string name="progress_dialog_searching_text">Searching</string>
    <string name="data_insertion_error_message">An error has occurred inserting the data</string>
</resources>
