<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/venue_list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/itemIconView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:contentDescription="@string/item_icon_view_content_description"
            android:padding="2dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/itemNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/itemIconView"
            android:background="@android:color/white"
            android:contentDescription="@string/item_name_view_content_description"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Item Name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemAddressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/itemNameView"
            android:layout_alignStart="@+id/itemNameView"
            android:layout_below="@+id/itemNameView"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/item_address_view_content_description"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_address_view_text"/>

        <TextView
            android:id="@+id/itemRatingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00B551"
            android:contentDescription="@string/item_rating_view_content_description"
            android:elevation="1dp"
            android:padding="8dp"
            android:text="@string/item_rating_view_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</RelativeLayout>
